@@ -10,6 +10,7 @@
     * Add Net::SSLeay::OCSP_CERTID class.
     * Add Net::SSLeay::DER::d2i_OCSP_CERTID method.
     * Add Net::SSLeay::DER::i2d_OCSP_CERTID method.
+    * Add Net::SSLeay::OCSP#basic_verify method.
 0.012 2024-11-13
   [New Features]
     * Add Net::SSLeay::X509_STORE_CTX#set_error method.
